--- a/css/style.css
+++ b/css/style.css
@@ -313,6 +313,7 @@ input:-ms-input-placeholder {
   width: 40px;
   min-height: 73px;
   fill: #d3c1ad;
+  margin: 110px 0 0 0;
 }
 
 .carousel-lr:hover,
