--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,7 @@
 a {
   text-decoration: none;
 }
+svg {fill: #fff}
 svg:hover {
   fill: #c7b299;
 }
@@ -142,8 +143,7 @@ body {
 }
 
 .container {
-  width: 1920px;
-  margin: 0 auto;
+
 }
 
 a:hover {
@@ -157,6 +157,7 @@ a:active {
   width: 100%;
   min-height: 1024px;
   margin: 0 auto;
+  padding-top: 40px;
   background-image: url(/study-gb/img/header.jpg);
   background-repeat: no-repeat;
   background-position: center;
@@ -165,11 +166,17 @@ a:active {
 }
 
 .header-top {
-  padding: 40px 376px 0 376px;
+  width: 1170px;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  justify-content: flex-start;
+  justify-content: space-between;
+  margin: 0 auto;
+}
+nav {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 0 0 160px;
 }
 .logo-block {
   display: flex;
@@ -223,14 +230,14 @@ a:active {
 .menu-link {
   text-decoration: none;
   color: #ffffff;
-  font-family: 'Montserrat', verdana, sans-serif;
+  font-family: 'montserrat', verdana, sans-serif;
   font-size: 14px;
-  line-height: normal;
+  
+  font-style: normal;
   font-weight: 300;
   padding-left: 30px; 
+  
 }
-
-
 
 
 .button-cart {
@@ -238,10 +245,10 @@ a:active {
   display: block;
   outline: none;
   border: none;
-  width: 18px;
+  padding: 0;
   min-height: 24px;
-  fill: #fff;
-  margin: 15px 0 0 35px;
+  margin-left: 65px;
+  
 }
 .button-cart:active {
   fill: #c7b299;
@@ -250,14 +257,13 @@ a:active {
 .search-form {
   width: 24px;
   min-height: 24px;
-  margin: 16px 0 0 28px;
+  margin: 15px 0 0 28px;
   position: relative;
 }
 
 .search-form-img {
-  width: 100%;
-  height: 100%;
-  fill: #fff;
+  width: 24px;
+  height: 24px;
 }
 
 .search-form-input {
